[tool.poetry]
name = "pvclabs-gamercon"
version = "0.1.0"
description = ""
authors = ["chalupaul <me@chalupaul.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
safety = "^1.10.3"
taskipy = "^1.6.0"
bandit = "^1.7.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"
coverage = "^5.5"

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | .venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.taskipy.tasks]

gate = "task poetry_lint && task flake && task black && task isort && task bandit && task safety"

unit = """coverage run -m --branch --omit='*/tests/*' --source app pytest -vv tests && coverage report -m --skip-covered --skip-empty --fail-under=75 """

tests = "task gate && task unit"